--- a/Client/src/index.css
+++ b/Client/src/index.css
@@ -5,7 +5,7 @@
   src: url("/fonts/Minecraft.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
-  font-display: swap;
+  font-display: optional; /* Use fallback font if custom font isn't loaded quickly */
 }
 
 @layer base {
